# WDumps-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  notebook.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: adr-001-transaction-script-architecture.md
src/wdumps_scraper/: __init__.py  cached_limiter_session.py  dumps_info_loader.py  exceptions.py  label_fetcher.py  notebook.py~  parsing.py  rendering.py  scraper.py  wdumper_client.py  wdumps_scraper.py  wikidata_client.py
tests/: test_dumps_info_loader.py  test_get_dump.py  test_get_label.py  test_get_labels.py  test_parsing.py  test_rendering.py  test_scraper.py
